--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2,6 +2,7 @@
 @import 'mixins.styl';
 @import 'normilize.styl';
 @import 'typography.styl';
+@import 'font-icons.styl';
 @import 'utils.styl';
 
 @import 'collected.styl';
