--- a/app/styles/utils.styl
+++ b/app/styles/utils.styl
@@ -1,7 +1,15 @@
-.u-left {
-  float: left;
-}
+.u-left
+  float left
+.u-cf
+  clearfix()
+.u-txtc
+  text-align center
+.u-fh
+  height 100%
+.u-fw
+  width 100%
 
-.u-cf {
-  clearfix();
+.u-scrollable {
+  overflow-x: hidden;
+  overflow-y: auto;
 }
