--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,13 @@
-{{outlet}}
+<header class="header">
+    <h1 class="u-txtc">
+        <img alt="Collected" src="/assets/img/brand.svg" />
+    </h1>
+</header>
+<section class="body u-cf">
+  <div class="sidebar u-scrollable u-left">
+
+  </div>
+  <div class="content u-scrollable">
+    {{outlet}}
+  </div>
+</section>
