--- a/app/styles/utils.styl
+++ b/app/styles/utils.styl
@@ -9,6 +9,12 @@
 .u-fw
   width 100%
 
+.u-reset {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
 .u-scrollable {
   overflow-x: hidden;
   overflow-y: auto;
