--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,17 @@
-<header class="header">
-    <h1 class="u-txtc">
-        <img alt="Collected" src="/assets/img/brand.svg" />
-    </h1>
-</header>
-<section class="body u-cf">
-  <div class="sidebar u-scrollable u-left">
+<section class="sidebar">
+    <div class="header u-txtc">
+        {{#link-to "index.home" class="lead"}}<i class="icon-image"></i>{{/link-to}}
 
-  </div>
-  <div class="content u-scrollable">
-    {{outlet}}
-  </div>
+    </div>
+    {{outlet 'sidebar'}}
+</section>
+<section class="container">
+    <div class="wrapper-main">
+        <header class="header">
+            <h1 class="u-txtc">
+                <img alt="Collected" src="/assets/img/brand.svg" />
+            </h1>
+        </header>
+        <div class="content u-scrollable">{{outlet 'main'}}</div>
+    </div>
 </section>
