- added new btn - FIXTURES/CollectionView issue - work in progress

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -25,10 +25,10 @@ body {
     &:hover { opacity: 1; }
   }
 
-    .header {
-      padding: 24px 0 16px;
-      border-bottom: 1px solid darkPrimaryColor;
-    }
+  .header {
+    padding: 24px 0 16px;
+    border-bottom: 1px solid darkPrimaryColor;
+  }
 }
 
 .container {
@@ -64,7 +64,7 @@ body {
   position: relative;
 
   .empty-collection {
-   position: absolute;
+    position: absolute;
     width: 100%;
     padding: 0 24px;
     top: 50%;
@@ -132,4 +132,21 @@ body {
       opacity: 1;
     }
   }
+}
+
+.sidebar .album-list {
+  calc('height', s('100vh - %s', 154px));
+  position: relative;
+}
+
+.sidebar .btn {
+  display: block;
+  width: 100%;
+  -webkit-appearance: none;
+  padding: 12px;
+  background-color: rgba(0,0,0,.4);
+  border: 0;
+  trans(background-color, .25s);
+
+  &:hover, &:focus { background-color: rgba(0,0,0,.2); }
 }
