--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,11 @@
 <section class="sidebar">
     <div class="header u-txtc">
         {{#link-to "index.home" class="lead"}}<i class="icon-image"></i>{{/link-to}}
-
     </div>
     {{outlet 'sidebar'}}
+    <div class="actions">
+        <button class="btn"><i class="icon-plus"></i> New collection</button>
+    </div>
 </section>
 <section class="container">
     <div class="wrapper-main">
