--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,6 +13,7 @@
             <h1 class="u-txtc">
                 <img alt="Collected" src="/assets/img/brand.svg" />
             </h1>
+            {{x-summary album=controller.currentAlbum}}
         </header>
         <div class="content u-scrollable">{{outlet 'main'}}</div>
     </div>
