--- a/app/templates/empty-album.hbs
+++ b/app/templates/empty-album.hbs
@@ -1,2 +1,4 @@
-<i class="icon-pictures2"></i>
-<h6>No photos yet.<br/> It's about a time to start uploading</h6>
+<h6><small>
+    No collections yet.<br/>
+    Use button below to add some.
+</small></h6>
