- added sting truncate

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -58,12 +58,13 @@ a {
   .card-item a {
     display: block
     width: 100%;
-    padding: 24px;
+    padding: 24px 40px 24px 24px;
     color: #fff;
     text-decoration: none;
     background-color: transparent;
     overflow: hidden;
     position: relative;
+    truncate();
     trans(background-color, .25s);
     [class*="icon-"] {
       position: absolute;
