--- a/app/styles/mixins.styl
+++ b/app/styles/mixins.styl
@@ -18,3 +18,9 @@ trans(property, duration) {
     -moz-transition: property duration ease-in-out;
     transition: property duration ease-in-out;
 }
+
+truncate() {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
