--- a/app/templates/empty-album.hbs
+++ b/app/templates/empty-album.hbs
@@ -1,4 +1,5 @@
-<h6><small>
+<h6 class="u-txtc"><small>
     No collections yet.<br/>
-    Use button below to add some.
+    Use button below<br/>
+    to add some.
 </small></h6>
