--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -14,6 +14,12 @@ a {
   &:hover { color: darkPrimaryColor; }
 }
 
+.empty-album-list {
+  top: 50%;
+  position: relative;
+  transform: translateY(-50%);
+}
+
 .btn-group {
   font-size: 0;
 }
@@ -117,7 +123,7 @@ a {
 }
 
 .panel {
-  padding: 24px 12px;
+  padding: 24px 220px 24px 12px;
 
   background-color: #e7e7e7;
   position: relative;
