--- a/app/templates/components/x-summary.hbs
+++ b/app/templates/components/x-summary.hbs
@@ -1,4 +1,4 @@
 <h4 class="title">
-  {{if album.name album.name 'All'}}
+    <span class="name">{{if album.name album.name 'All'}}</span>
     <span class="sub-detail"> / {{pluralize album.photos.length 'photo' 'photos'}} in total</span>
 </h4>
