- fixed photos removing

--- a/app/templates/photos.hbs
+++ b/app/templates/photos.hbs
@@ -1,1 +1,1 @@
-{{view 'photosGrid' contentBinding="controller.content"}}
+{{view 'photosGrid' contentBinding="controllers.application.currentAlbum.photos"}}
