- add new collection support

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
     </div>
     {{outlet 'sidebar'}}
     <div class="actions">
-        <button class="btn"><i class="icon-plus"></i> New collection</button>
+        <button class="btn" {{action 'createCollection'}}><i class="icon-plus"></i> New collection</button>
     </div>
 </section>
 <section class="container">
