- more cleanup - added bs modal and tooltip - added modal component to app

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -5,6 +5,7 @@ body {
   * {
     box-sizing: border-box;
   }
+  min-width: 840px;
 }
 
 
@@ -129,7 +130,7 @@ a {
   position: relative;
 
   .sub-detail {
-    font-size: 12px;
+    font-size: 14px;
     color: #787878;
     letter-spacing: 0;
   }
@@ -162,7 +163,7 @@ a {
 }
 
 .content {
-  calc('height', s('100vh - %s', 132px));
+  calc('height', s('100vh - %s', 100px));
   position: relative;
 
   .empty-collection {
@@ -181,10 +182,6 @@ a {
       display: block;
     }
   }
-}
-
-.u-hide + .content {
-  calc('height', s('100vh - %s', 100px));
 }
 
 .photo-list {
@@ -246,22 +243,5 @@ a {
       max-width: 100%;
       height: auto;
     }
-  }
-}
-
-.panel.album-actions {
-  padding: 0;
-  height: 42px;
-  bottom: 0;
-  left: 240px;
-  right: 0;
-  position: absolute;
-  text-align: right;
-
-  .btn {
-    font-size: 16px;
-    padding: 12px;
-    height: 100%;
-    width: 120px;
   }
 }
