--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -1,2 +1,10 @@
 primaryColor = #00BCD4;
 darkPrimaryColor = darken(primaryColor, 8%);
+
+zindex-tooltip = 1070;
+tooltip-max-width = 200px;
+tooltip-color = #fff;
+tooltip-bg = #000;
+tooltip-opacity = .9;
+tooltip-arrow-width = 5px;
+tooltip-arrow-color = tooltip-bg;
