--- a/app/templates/components/x-summary.hbs
+++ b/app/templates/components/x-summary.hbs
@@ -2,3 +2,9 @@
     <span class="name">{{if album.name album.name 'All'}}</span>
     <span class="sub-detail"> / {{pluralize album.photos.length 'photo' 'photos'}} in total</span>
 </h4>
+{{#if album.name}}
+	 <div class="btn-group u-fh">
+	    <button {{action 'remove' album}} class="btn"><i class="icon-cancel2"></i> Remove</button>
+	    <button {{action 'clean' album}} class="btn"><i class="icon-trashcan"></i> Clean</button>
+	 </div>
+ {{/if}}
