--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -65,7 +65,7 @@ a {
   .card-item a {
     display: block
     width: 100%;
-    padding: 24px 40px 24px 24px;
+    padding: 12px 40px 12px 24px;
     color: #fff;
     text-decoration: none;
     background-color: transparent;
@@ -73,12 +73,17 @@ a {
     position: relative;
     truncate();
     trans(background-color, .25s);
+    .sub-detail { 
+      font-size: 12px;
+      color: #fff;
+      text-shadow: 0 -1px 0 #darkPrimaryColor;
+    }
     [class*="icon-"] {
       position: absolute;
       color: #fff;
       font-size: 24px;
       right: -24px;
-      top: 20px;
+      top: 16px;
       opacity: 0;
       trans(all, .25s);
     }
@@ -125,6 +130,8 @@ a {
 
 .panel {
   padding: 24px 220px 24px 12px;
+
+  &.panel-extended { padding: 9px 220px 9px 12px; }
 
   background-color: #e7e7e7;
   position: relative;
