--- a/app/templates/components/x-modal.hbs
+++ b/app/templates/components/x-modal.hbs
@@ -9,8 +9,10 @@
               {{yield}}
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" {{action 'ok'}}>OK</button>
+              <div class="btn-group">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" {{action 'ok'}}>OK</button>
+              </div>
             </div>
           </div>
         </div>
