--- a/app/templates/modal-assign-photo.hbs
+++ b/app/templates/modal-assign-photo.hbs
@@ -1,27 +1,32 @@
 {{#x-modal title='Assign photo to collection' ok='assignPhotoToCollection' close='removeModal'}}
-	{{#if model.albums.length}}
-		<h6>
-			<small>This photo is already in <strong>{{view.collectionList}}</strong></small>
-		</h6>
-	{{/if}}
-	{{#unless pickedCollection}}
-	<div class="dropdown-collections open">
-		{{input value=view.collectionName class="collection-name u-fw" placeholder="Enter collection name or choose from the list"}}
-		<ul class="u-reset album-list">
-			{{#if view.collectionName.length}}
-				<li {{action 'pickCollection' view.collectionName}} class="item-card item-new"><i class="icon-plus"></i> Create new <strong>{{view.collectionName}}</strong></li>
+	<h6>
+		<small>
+			{{#if pickedCollection}}
+				You have picked <strong>{{pickedCollection.name}}</strong>. Click to <a {{action 'undoPick'}} href="#">undo</a>?
+			{{else}}
+				{{#if model.albums.length}}
+					This photo is already in <strong>{{view.collectionList}}</strong>
+				{{/if}}	
 			{{/if}}
-			{{#each album in view.freeCollections}}	
-				<li {{action 'pickCollection' album}} class="item-card">
-					<strong>{{album.name}}</strong>
-					<div class="sub-detail">{{pluralize album.photos.length 'photo' 'photos'}} in total</div>
-				</li>
-			{{/each}}
-		</ul>
+		</small>
+	</h6>
+	
+	<div class="dropdown-collections {{if pickedCollection 'u-hide'}}">
+		{{input value=view.collectionName class="collection-name u-fw" placeholder="Start typing to create new collection or pick from the list"}}
+		{{#if view.trimmedCollectionName.length}}
+			<button {{action 'pickCollection' view.trimmedCollectionName}} class="btn">
+				<i class="icon-plus"></i> Create
+			</button>
+		{{/if}}
+		{{#if view.freeCollections.length}}
+			<ul class="u-reset album-list">
+				{{#each album in view.freeCollections}}	
+					<li {{action 'pickCollection' album}} class="item-card">
+						<strong>{{album.name}}</strong>
+						<div class="sub-detail">{{pluralize album.photos.length 'photo' 'photos'}} in total</div>
+					</li>
+				{{/each}}
+			</ul>
+		{{/if}}
 	</div>
-	{{else}}
-	<p>
-		You have picked <strong>{{pickedCollection.name}}</strong>. Click to <a {{action 'undoPick'}} href="#">undo</a>?
-	</p>
-	{{/unless}}
 {{/x-modal}}
