--- a/app/templates/modal-assign-photo.hbs
+++ b/app/templates/modal-assign-photo.hbs
@@ -2,7 +2,8 @@
 	<h6>
 		<small>
 			{{#if pickedCollection}}
-				You have picked <strong>{{pickedCollection.name}}</strong>. Click to <a {{action 'undoPick'}} href="#">undo</a>?
+				You have picked:
+				<a class="sub-detail" {{action 'undoPick'}} href="#">undo</a>
 			{{else}}
 				{{#if model.albums.length}}
 					This photo is already in <strong>{{view.collectionList}}</strong>
@@ -10,9 +11,10 @@
 			{{/if}}
 		</small>
 	</h6>
-	
-	<div class="dropdown-collections {{if pickedCollection 'u-hide'}}">
-		{{input value=view.collectionName class="collection-name u-fw" placeholder="Start typing to create new collection or pick from the list"}}
+	{{#unless pickedCollection}}
+	<div class="dropdown-collections">
+		{{input value=view.collectionName class="collection-name u-fw" 
+			    placeholder="Start typing to create new collection or pick from the list'"}}
 		{{#if view.trimmedCollectionName.length}}
 			<button {{action 'pickCollection' view.trimmedCollectionName}} class="btn">
 				<i class="icon-plus"></i> Create
@@ -29,4 +31,9 @@
 			</ul>
 		{{/if}}
 	</div>
+	{{else}}
+		<ul class="u-reset album-list selected">
+			<li class="item-card"><strong>{{pickedCollection.name}}</strong></li>
+		</ul>
+	{{/unless}}
 {{/x-modal}}
