--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -74,22 +74,31 @@ input[type="text"] {
   a.lead {
     color: #fff;
     text-decoration: none;
-    font-size: 60px;
-    opacity: .5;
+    font-size: 28px;
+    opacity: .75;
+    display: block;
     trans(opacity, .25s);
 
     &:hover, &.active { opacity: 1; }
+
+    [class*="icon-"] {
+        font-size: 48px;
+        width: 48px;
+        height: 48px;
+    }
+
+    .caption { padding: 0 0 0 60px; }
   }
 
   .header {
-    padding: 16px 0 12px;
+    padding: 26px 0 24px 12px;
     border-bottom: 1px solid darkPrimaryColor;
   }
 
   .card-item a {
     display: block
     width: 100%;
-    padding: 12px 40px 12px 24px;
+    padding: 12px 40px 12px 12px;
     color: #fff;
     text-decoration: none;
     background-color: transparent;
@@ -102,15 +111,27 @@ input[type="text"] {
       color: #fff;
       text-shadow: 0 -1px 0 #darkPrimaryColor;
     }
-    [class*="icon-"] {
+
+    .caption { padding: 8px 0 0 60px; }
+
+    img, .icon-picture {
+      width: 48px;
+      height: 48px;
+    }
+
+    .icon-picture { font-size: 48px; }
+
+    .icon-pictures3 {
       position: absolute;
       color: #fff;
       font-size: 24px;
       right: -24px;
-      top: 16px;
+      top: 50%;
+      transform: translateY(-50%);
       opacity: 0;
       trans(all, .25s);
     }
+
 
     &.active, &:hover {
       background-color: rgba(0,0,0,.25s);
@@ -122,7 +143,7 @@ input[type="text"] {
   }
 
   .album-list {
-    calc('height', s('100vh - %s', 142px));
+    calc('height', s('100vh - %s', 172px));
     position: relative;
   }
 
@@ -134,9 +155,18 @@ input[type="text"] {
     padding: 12px;
     background-color: rgba(0,0,0,.4);
     border: 0;
+    text-align: left;
     trans(background-color, .25s);
-
     &:hover, &:focus { background-color: rgba(0,0,0,.2); }
+    .icon-plus {
+      font-size: 48px;
+      width: 48px;
+      height: 48px;
+    }
+    .caption {
+      padding-left: 60px;
+      line-height: 54px;
+    }
   }
 
 }
