--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -1,5 +1,8 @@
 primaryColor = #00BCD4;
+dangerColor = #FF5252;
+
 darkPrimaryColor = darken(primaryColor, 8%);
+darkDangerColor = darken(dangerColor, 8%);
 
 zindex-tooltip = 1070;
 tooltip-max-width = 200px;
