--- a/app/templates/photo.hbs
+++ b/app/templates/photo.hbs
@@ -7,7 +7,7 @@
           </a>
         {{else}}
           <a href="#" {{action 'showModal' 'modal-assign-photo' this}}>
-                <i class="icon-plus"></i>
+                <i class="icon-plus2"></i>
           </a>
         {{/if}}
       </div>
