- minor adjustments to styles

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -326,7 +326,9 @@ input[type="text"] {
     small .sub-detail { 
       position: absolute; 
       right: 0;
+      line-height: 12px;
       bottom: 4px;
+      .icon-reply { font-size: 18px; }
     }
   }
   .album-list { 
@@ -361,7 +363,7 @@ input[type="text"] {
 
         li { 
           color: darkPrimaryColor; 
-          background: transparent;
+          background: #f2fafb;
         }
       }
 
