--- a/app/templates/components/x-modal.hbs
+++ b/app/templates/components/x-modal.hbs
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-footer">
               <div class="btn-group">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" {{action 'ok'}}>OK</button>
               </div>
             </div>
