--- a/app/templates/card-album.hbs
+++ b/app/templates/card-album.hbs
@@ -1,4 +1,4 @@
-{{#link-to 'collection' id class="u-cf"}}
+{{#link-to 'collections.single' id class="u-cf"}}
 	{{#if photos.length}}<img class="u-left" src="{{photos.lastObject.url}}" />{{else}}<i class="icon-picture u-left"></i>{{/if}}
 	<div class="caption">
 		{{name}} <i class="icon-pictures3"></i>
