--- a/app/templates/empty-grid.hbs
+++ b/app/templates/empty-grid.hbs
@@ -1,5 +1,5 @@
 <i class="icon-pictures2"></i>
 <h6>
     No photos in <strong>{{controller.currentAlbum.name}}</strong> yet?<br/>
-    Just follow this {{#link-to 'collections'}}link{{/link-to}} to add some.
+    Just follow this {{#link-to 'collections.index'}}link{{/link-to}} to add some.
 </h6>
