--- a/app/templates/modal-assign-photo.hbs
+++ b/app/templates/modal-assign-photo.hbs
@@ -1,4 +1,4 @@
-{{#x-modal title='Assign photo to collection' ok='assignPhotoToCollection' close='removeModal'}}
+{{#x-modal title='Assign photo to collection' okTitle="Add" ok='assignPhotoToCollection' notReady=notReady close='removeModal'}}
 	<h6>
 		<small>
 			{{#if pickedCollection}}
