--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -61,6 +61,13 @@ input[type="text"] {
     position: relative;
     top: 2px;
   }
+
+  &[disabled] { 
+    opacity: .7; 
+    cursor: not-allowed;
+
+    &:hover, &:focus { background-color: darkPrimaryColor; }
+  }
 }
 
 .sidebar {
@@ -158,7 +165,7 @@ input[type="text"] {
     text-align: left;
     trans(background-color, .25s);
     &:hover, &:focus { background-color: rgba(0,0,0,.2); }
-    .icon-plus {
+    .icon-plus2 {
       font-size: 48px;
       width: 48px;
       height: 48px;
@@ -185,7 +192,7 @@ input[type="text"] {
 .panel {
   padding: 24px 220px 24px 12px;
 
-  &.panel-extended { padding: 6px 220px 6px 12px; }
+  &.panel-extended { padding: 0 220px 12px 12px; }
 
   background-color: #e7e7e7;
   position: relative;
